--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "sveltestack",
+	"name": "svelte-flexboards",
+	"licence": "MIT",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -50,5 +51,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.11"
+	},
+	"dependencies": {
+		"gridstack": "^11.1.0"
 	}
 }
