--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"check": "pnpm build:packages && pnpm -r check",
 		"ci:publish": "pnpm build:packages && changeset publish",
 		"dev": "pnpm -r --parallel dev",
+		"dev:host": "pnpm -r --parallel dev:host",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"lint:fix": "eslint --fix ."
