--- a/packages/svelte-flexiboards/package.json
+++ b/packages/svelte-flexiboards/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "svelte-flexiboards",
+	"name": "svelte-flexiboards",
 	"licence": "MIT",
-  "version": "0.1.0",
-  "description": "Drag-and-drop components for Svelte.",
+	"version": "0.1.0",
+	"description": "Drag-and-drop components for Svelte.",
 	"scripts": {
 		"dev": "pnpm watch",
+		"dev:host": "pnpm dev",
 		"build": "pnpm package",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "pnpm run package",
@@ -35,23 +36,23 @@
 	"peerDependencies": {
 		"svelte": "^5.0.0"
 	},
-  "devDependencies": {
-    "vite": "^5.0.11",
-	"@sveltejs/adapter-auto": "^3.0.0",
-	"@sveltejs/kit": "^2.0.0",
-	"@sveltejs/package": "^2.0.0",
-	"@sveltejs/vite-plugin-svelte": "^4.0.0",
-	"typescript": "^5.0.0",
-	"typescript-eslint": "^8.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Blakintosh/svelte-flexiboards.git"
-  },
-  "author": "Blakintosh",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Blakintosh/svelte-flexiboards/issues"
-  },
-  "homepage": "https://github.com/Blakintosh/svelte-flexiboards#readme"
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.0.11"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Blakintosh/svelte-flexiboards.git"
+	},
+	"author": "Blakintosh",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Blakintosh/svelte-flexiboards/issues"
+	},
+	"homepage": "https://github.com/Blakintosh/svelte-flexiboards#readme"
 }
