--- a/site/vercel.json
+++ b/site/vercel.json
@@ -1,4 +1,4 @@
 {
-    "buildCommand": "cd ../packages/svelte-flexiboards && pnpm run build && cd ../site && pnpm run build",
+    "buildCommand": "cd ../packages/svelte-flexiboards && pnpm run build && cd ../../site && pnpm run build",
     "installCommand": "pnpm install"
 }
