--- a/site/package.json
+++ b/site/package.json
@@ -68,6 +68,7 @@
 	},
 	"dependencies": {
 		"mode-watcher": "^0.5.0",
-		"svelte-flexiboards": "workspace:^"
+		"svelte-flexiboards": "workspace:^",
+		"vaul-svelte": "^0.3.2"
 	}
 }
