--- a/site/package.json
+++ b/site/package.json
@@ -36,6 +36,7 @@
 		"svelte": "^5.0.0"
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.3.2",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/adapter-vercel": "^5.6.2",
 		"@sveltejs/kit": "^2.17.2",
@@ -67,6 +68,8 @@
 		"vite": "^5.4.14"
 	},
 	"dependencies": {
+		"@melt-ui/svelte": "^0.86.6",
+		"melt": "^0.28.2",
 		"mode-watcher": "^0.5.1",
 		"rehype-slug": "^6.0.0",
 		"remark-toc": "^9.0.0",
