--- a/site/package.json
+++ b/site/package.json
@@ -70,6 +70,7 @@
 	},
 	"dependencies": {
 		"@melt-ui/svelte": "^0.86.6",
+		"mdsvexamples": "^0.5.0",
 		"melt": "^0.28.2",
 		"mode-watcher": "^0.5.1",
 		"rehype-slug": "^6.0.0",
