--- a/site/package.json
+++ b/site/package.json
@@ -43,8 +43,8 @@
 		"@sveltejs/package": "^2.3.10",
 		"@sveltejs/vite-plugin-svelte": "^4.0.4",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.1.7",
 		"@types/eslint": "^9.6.1",
-		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.0.0-next.77",
 		"clsx": "^2.1.1",
 		"eslint": "^9.20.1",
@@ -61,8 +61,8 @@
 		"svelte-check": "^4.1.4",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
-		"tailwindcss": "^3.4.17",
-		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss": "^4.1.7",
+		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.24.0",
 		"vaul-svelte": "1.0.0-next.7",
