--- a/site/package.json
+++ b/site/package.json
@@ -45,7 +45,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/eslint": "^9.6.1",
-		"bits-ui": "1.0.0-next.77",
+		"bits-ui": "1.7.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.20.1",
 		"eslint-config-prettier": "^9.1.0",
@@ -59,8 +59,8 @@
 		"publint": "^0.2.12",
 		"svelte": "^5.20.1",
 		"svelte-check": "^4.1.4",
-		"tailwind-merge": "^2.6.0",
-		"tailwind-variants": "^0.3.1",
+		"tailwind-merge": "^3.3.0",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.1.7",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.7.3",
@@ -69,13 +69,17 @@
 		"vite": "^5.4.14"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.511.0",
 		"@melt-ui/svelte": "^0.86.6",
+		"formsnap": "^2.0.1",
 		"mdsvexamples": "^0.5.0",
 		"melt": "^0.28.2",
 		"mode-watcher": "^0.5.1",
+		"paneforge": "1.0.0-next.5",
 		"rehype-slug": "^6.0.0",
 		"remark-toc": "^9.0.0",
 		"shiki": "^2.4.1",
-		"svelte-flexiboards": "workspace:^"
+		"svelte-flexiboards": "workspace:^",
+		"svelte-sonner": "^1.0.2"
 	}
 }
