--- a/site/package.json
+++ b/site/package.json
@@ -33,7 +33,8 @@
 		}
 	},
 	"peerDependencies": {
-		"svelte": "^5.0.0"
+		"svelte": "^5.0.0",
+		"@sveltejs/kit": "^2.17.2"
 	},
 	"devDependencies": {
 		"@lucide/svelte": "^0.482.0",
@@ -79,7 +80,6 @@
 		"remark-toc": "^9.0.0",
 		"shiki": "^2.4.1",
 		"svelte-flexiboards": "workspace:^",
-		"svelte-sonner": "^1.0.2",
-		"@sveltejs/kit": "^2.17.2"
+		"svelte-sonner": "^1.0.2"
 	}
 }
