--- a/site/package.json
+++ b/site/package.json
@@ -33,8 +33,8 @@
 		}
 	},
 	"peerDependencies": {
-		"svelte": "^5.0.0",
-		"@sveltejs/kit": "^2.17.2"
+		"@sveltejs/kit": "^2.17.2",
+		"svelte": "^5.0.0"
 	},
 	"devDependencies": {
 		"@lucide/svelte": "^0.482.0",
@@ -58,7 +58,7 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.2.12",
-		"svelte": "^5.20.1",
+		"svelte": "^5.35.7",
 		"svelte-check": "^4.1.4",
 		"tailwind-merge": "^3.3.0",
 		"tailwind-variants": "^0.2.1",
