--- a/site/package.json
+++ b/site/package.json
@@ -37,6 +37,7 @@
 		"svelte": "^5.0.0"
 	},
 	"devDependencies": {
+		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.482.0",
 		"@melt-ui/pp": "^0.3.2",
 		"@sveltejs/adapter-auto": "^3.3.1",
@@ -46,7 +47,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/eslint": "^9.6.1",
-		"bits-ui": "1.7.0",
+		"bits-ui": "2.9.4",
 		"clsx": "^2.1.1",
 		"eslint": "^9.20.1",
 		"eslint-config-prettier": "^9.1.0",
